fix z-index bug

--- a/src/assets/scss/App.scss
+++ b/src/assets/scss/App.scss
@@ -41,6 +41,8 @@
 }
 
 .headerWrapper {
+  position: relative;
+  z-index: 100;
   height: 6rem;
 }
 
